<package format="2">
  <name>esa_servo</name>
  <version>0.0.0</version>
  <description>
    The esa_servo package
  </description>
  <license>TODO</license>

  <maintainer email="nicola@sysdesign.it">Nicola Conti</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Catkin Dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>industrial_msgs</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>soem</depend>
  <depend>xmlrpcpp</depend>
  <!-- System Dependencies -->
  <depend>boost</depend>
  <!-- Execution Dependencies-->
  <exec_depend>ethercat_grant</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

</package>
